# django-graphql

./: README.md  data.json  pyproject.toml  requirements.txt
api/: schema.py
api/migrations/: 0001_initial.py
books_api/: settings.py  urls.py
