[tool.poetry]
name = "django-graphql"
version = "0.1.0"
description = ""
authors = ["Uemerson Pinheiro Junior <uemersonpinheirojunior@gmail.com>"]
readme = "README.md"
packages = [{include = "django_graphql"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.3"
graphene-django = "^3.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
mypy = "^0.982"
pylint = "^2.15.5"
black = {version = "^22.10.0", allow-prereleases = true}
pylint-django = "^2.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
